# Function_Optimization

./: Area.cpp  Area.h  BP.pro  CMakeLists.txt  Criteria.cpp  Criteria.h  Function.cpp  Function.h  Gradient.cpp  Gradient.h  GradientDialog.cpp  GradientDialog.h  GradientDialog.ui  OPT.pro  Optimization.h  Stochastic.cpp  Stochastic.h  StochasticDialog.cpp  StochasticDialog.h  StochasticDialog.ui  criteria.cpp  criteria.h  function.cpp  function.h  gradient.cpp  gradient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stochastic.cpp  stochastic.h
